2004-11-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Look for popt
	
	* src/devilspie.c:
	Use popt to parse arguments, and as a result allow multiple
	configuration files to be loaded and make --apply-to-existing
	work.

	* src/config-parser.c:
	Use g_warning()

2004-11-14  Ross Burton  <ross@burtonini.com>

	* src/devilspie-matcher-windowname.gob:
	Check for invalid regular expressions.

2004-10-03  Ross Burton  <ross@burtonini.com>

	* README:
	Remove the action/matcher documentation.

	* docs2html.xsl:
	XSLT transformation from doc-generator XML to HTML.

	* Makefile.am:
	Build devilspie-reference.html

	* src/doc-generator.c:
	Put the type of the property in the XML.

2004-10-03  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Run parser-test as a proper test, and build parser-test only when
	doing tests.
	
	* src/parser-test.c:
	Load a hard-coded configuration file as Automake tests are flawed.

2004-10-02  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Remove unused GNOME library checks, and look for libxml.

	* src/doc-generator.c:
	* src/Makefile.am:
	New program, generate documentation for the matchers and actions.

2004-10-01  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-exec.gob:
	* src/flurb.c:
	* src/Makefile.am:
	Add command execution action by John Russell.

2004-10-01  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-resize.gob:
	* README:
	Add maximized_horizontally and maximized_vertically, patch from
	John Russell.

2004-09-20  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-resize.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-matcher-windowname.gob:
	Various fixes for compile warnings.

	* src/Makefile.am:
	Add -Wall to CFLAGS.

2004-09-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.7.

2004-09-07  Ross Burton  <ross@burtonini.com>

	* README:
	* sample-config.xml:
	* src/devilspie-action-decorate.gob: