@@ -1,0 +1,100 @@
+%h{
+#define WNCK_I_KNOW_THIS_IS_UNSTABLE
+#include "libwnck/window.h"
+#include "libwnck/screen.h"
+#include "tristate-dummy.h"
+#include "devilspie-action.h"
+#include "devilspie.h"
+
+#include <X11/Xlib.h>
+#include <X11/Xatom.h>
+#include <gdk/gdkx.h>
+#include <unistd.h>
+
+/* Composite transparency */
+#define OPAQUE     0xffffffff
+#define OPACITY    "_NET_WM_WINDOW_OPACITY"
+#define OPAQUE_DEF 0xc0000000
+
+Screen *_wnck_screen_get_xscreen (WnckScreen *screen);
+Atom _wnck_atom_get (const char *atom_name);
+%}
+
+class DevilsPie:Action:Opacity from DevilsPie:Action {
+
+	public double opacity = 0.75;
+	property DOUBLE opacity
+		(nick = _("Opacity of window"),
+		blurb = _("Window is transparent (xcompmgr w/ Composite Extensions in xorg)"),
+		default_value = 0.75, link);
+
+	/* sets opacity of window. */
+	/* if (opacity < 0 || opacity > 1) toggles opacity between none and default */
+	private void composite_set_opacity( Wnck:Window *window, double opacity ) {
+		Window Real, Parent, Root;
+		Window *Buf0;
+		unsigned int Value;
+		unsigned int *BufX;
+		Atom ActualReturnType;
+		unsigned long Buf1, Buf2;
+		unsigned char *Data;
+
+		/* from our window-id, find the last window-id up the tree before the   */
+		/* root-window. xcompmgr works only with this id.                       */
+		Real = wnck_window_get_xid( window );
+		Root = 0;
+		/* printf( "got original window-id: 0x%08x\n", Real ); */
+		while(
+			   XQueryTree( GDK_DISPLAY( ), Real, &Root, &Parent, &Buf0, &Value )
+			&& (Real   != Root)
+			&& (Parent != Root)
+		) Real = Parent;
+		/* printf( "got real window-id: 0x%08x\n", Real ); */
+		usleep( 100 ); /* don't know why, but without this i had windows where  */
+		               /* transparency didn't work, although the atom got set.  */
+
+		/* if opacity-value is not valid then toggle between OPAQUE_DEF or not set */
+		if( (opacity < 0) || (opacity > 1) ) {
+			XGetWindowProperty( GDK_DISPLAY( ), Real,       /* Display *, Window,               */
+			                    _wnck_atom_get( OPACITY ),  /* Atom property,                   */
+			                    0L, 1L, False, XA_CARDINAL, /* offset, length, delete, req_type */
+			                    &ActualReturnType, &Value, &Buf1, &Buf2, &Data );
+			/* check if there was any value read from window */
+			if( Data != None ) {
+				memcpy( &Value, Data, sizeof( unsigned int ) );
+				XFree( (void *)Data );
+				/* printf("found opacity %g for window-id 0x%08x\n", (double)(Value / OPAQUE), Real ); */
+			} else {
+				Value = OPAQUE;
+			}
+
+			/* finally toggle, depending on current value */
+			Value = ( Value != OPAQUE ) ? OPAQUE : OPAQUE_DEF;
+		} else {
+			/* opacity within valid range */
+			Value = (unsigned int)(opacity * OPAQUE);
+		}
+
+		/* printf( "setting opacity to 0x%08x for window 0x%08x\n", Value, Real ); */
+		if( Value == OPAQUE ) {
+			XDeleteProperty( GDK_DISPLAY( ), Real, _wnck_atom_get( OPACITY ) );
+		} else {
+			XChangeProperty( GDK_DISPLAY( ), Real, _wnck_atom_get( OPACITY ),
+			                 XA_CARDINAL, 32, PropModeReplace,
+			                 (unsigned char *)&Value, 1L );
+		}
+		XSync( GDK_DISPLAY( ), False );
+	}
+
+	/* Main action... */
+	override (DevilsPie:Action) gboolean run( DevilsPie:Action *self (check null type), Wnck:Window *window (check null type) ) {
+		DevilsPieActionOpacity *a = (DevilsPieActionOpacity*)self;
+
+		self_composite_set_opacity( window, a->opacity );
+		return TRUE;
+	}
+  
+	public GObject *new( void ) {
+		return (GObject*)GET_NEW;
+	}
+}
